--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Our Book Service in Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<start-class>com.gateway.ApiGatewayApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -22,6 +23,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
