--- a/Assignment6/Catalog/pom.xml
+++ b/Assignment6/Catalog/pom.xml
@@ -8,14 +8,13 @@
 		<version>3.1.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.Ass6</groupId>
-	<artifactId>book.service</artifactId>
+	<groupId>com.ass6</groupId>
+	<artifactId>Catalog</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>book.service</name>
-	<description>Our Book Service in Spring Boot</description>
+	<name>BookAPI</name>
+	<description>BookAPI</description>
 	<properties>
 		<java.version>17</java.version>
-		<start-class>com.gateway.ApiGatewayApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -23,12 +22,6 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
